feat: Shell多模态/结构化输出/可观测命令；配置三级加载与打包优化